[metadata]
name = frx
author = Nilesh Bobade
author_email = nilesh@foo.com
description = Manage frx variables
keywords =
    variables
    frx
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: End Users/Desktop
    Environment :: Console

[options]
packages = find:
zip_safe = False
setup_requires = setuptools_scm
install_requires =
    Click
include_package_data = True
python_requires = >=3.6

[options.entry_points]
console_scripts =
    frx=frx:main
